--- a/latex/ch2_background.tex
+++ b/latex/ch2_background.tex
@@ -43,6 +43,8 @@ Dennis Gabor's seminal paper on information theory describes the analysis of a s
 
 \subsubsection{Fast Fourier Transform (FFT)}
 
+Its most common implementation choice \todo{citeme}, the Fast Fourier Transform (FFT), is considered one of the most important algorithms in modern computing \todo{citeme}.
+
 \subsubsection{Short-time Fourier Transform (STFT)}
 
 \subsubsection{Constant-Q Transform (CQT)}
