--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -113,6 +113,32 @@ address = {USA},
 edition = {1st},
 }
 
+@incollection{timbretransients1,
+  author    = {Stephen McAdams},
+  title     = {The Perceptual Representation of Timbre},
+  booktitle = {Timbre: Acoustics, Perception, and Cognition},
+  publisher = {Springer},
+  year      = {2019},
+  editor    = {Kai Siedenburg and Charalampos Saitis and Stephen McAdams and Arthur N. Popper and Richard R. Fay},
+  volume    = {69},
+  series    = {Springer Handbook of Auditory Research},
+  chapter   = {2},
+  pages     = {26},
+  url = {https://www.mcgill.ca/mpcl/files/mpcl/mcadams_2019_timbreacoustperceptcogn_ch2.pdf}
+}
+
+
+@article{timbretransients2,
+author = {Siedenburg, Kai},
+year = {2019},
+month = {02},
+pages = {1078--1087},
+title = {Specifying the perceptual relevance of onset transients for musical instrument identification},
+volume = {145},
+journal = {The Journal of the Acoustical Society of America},
+doi = {10.1121/1.5091778}
+}
+
 @article{bettermusicsep,
   title={Comparison of Frequency-Warped Representations for Source Separation of Stereo Mixtures},
   author={Juan Jos{\'e} Burred and T. Sikora},
