Slightly more progress

--- a/latex/ch1_introduction.tex
+++ b/latex/ch1_introduction.tex
@@ -8,7 +8,7 @@ The study of acoustic signals forms the core of many fields including sonar, sei
 
 One downside of the Fourier transform is that it contains no temporal information. The Fourier transform represents the frequency components of an acoustic signal by a sum of infinite sinusoids, but it does not describehow these frequencies evolve with time. Many important signals such as speech and music contain frequency components that change with time. For these signals, joint time-frequency analysis is an essential tool.
 
-Time-frequency analysis is performed by multiplying the signal being studied by finite, consecutive windows of a short duration, and taking the Fourier transform of each windowed section. This is also referred to as the short-time Fourier transform (STFT) or spectrogram \todo{cite textbook}. The STFT is subject to a fixed and bounded time-frequency resolution, such that one cannot be arbitrarily precise in both time and frequency, and must trade them off by changing the duration of the window. This arises from the Heisenberg uncertainty principle, and is a result of time and frequency being Fourier duals of each other, a principle from quantum computing.
+Time-frequency analysis is performed by multiplying the signal being studied by finite, consecutive windows of a short duration, and taking the Fourier transform of each windowed section. This is also referred to as the short-time Fourier transform (STFT) or spectrogram \todo{cite textbook}. The STFT is subject to a fixed and bounded time-frequency resolution, such that one cannot be arbitrarily precise in both time and frequency, and must trade them off by changing the duration of the window.
 
 \subsection{Motivation}
 
