--- a/latex/ch2_background.tex
+++ b/latex/ch2_background.tex
@@ -33,6 +33,8 @@
 
 Dennis Gabor's seminal paper on information theory describes the analysis of a speech signal by applying the Fourier transform to finite, windowed segments of the input signal, referred to as the Gabor transform, and considered synonymous with the short-time Fourier transform. From the Gabor transform, which used a fixed or stationary window size, 
 
+This arises from the Heisenberg uncertainty principle, and is a result of time and frequency being Fourier duals of each other, a principle from quantum computing.
+
 \subsection{Transforms of acoustic signals}
 
 \ichfeedback{for each, describe algorithmic complexity and common libraries - FFTW, librosa, essentia, etc.}
