--- a/latex/report.tex
+++ b/latex/report.tex
@@ -77,7 +77,7 @@
 \vspace{3.5em}
 
 \begin{abstract}
-	The short-time Fourier transform (STFT) is an important tool for the time-frequency analysis of acoustic signals. The STFT is commonly used to represent musical signals in digital signal processing algorithms and machine learning models for music information retrieval (MIR). Despite the ubiquity of the STFT, it is limited by its fixed and bounded time-frequency resolution. The Nonstationary Gabor Transform (NSGT) is an alternative time-frequency transform which better represents musical signals by varying its time-frequency resolution. In the task of music source separation, STFT-based models are popular and have achieved success for many years. In this thesis, first the STFT and NSGT are described as tools for representing and manipulating musical signals. Next, the task of music source separation is described. Finally, the STFT is replaced with the NSGT in a contemporary model for music source separation, demonstrating improved results.
+	The short-time Fourier transform (STFT) is an important tool for the time-frequency analysis of acoustic signals. The STFT is commonly used to represent musical signals in digital signal processing algorithms and machine learning models for music information retrieval (MIR). Despite the ubiquity of the STFT, it is limited by a fixed and bounded time-frequency resolution. The Nonstationary Gabor Transform (NSGT), and its realtime variant the sliCQ transform, are alternative time-frequency transforms which better represent musical signals through varying time-frequency resolution. In the task of music source separation or music demixing, STFT-based models are popular and have achieved success for several years. In this thesis, first the STFT and sliCQ transform are described as tools for representing and manipulating musical signals. Next, the task of music demixing is described. Finally, the STFT is successfully replaced with the sliCQ transform in a neural network for music demixing, showing that this may be a promising direction for future research.
 \end{abstract}
 
 \vfill
